<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:elevation="4dp"
    app:cardCornerRadius="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvEmployeeName"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"
            android:text="@string/name_1_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvEmployeeUsername"
            app:layout_constraintTop_toBottomOf="@id/tvEmployeeName"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/username_1_s"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvEmployeeEmail"
            app:layout_constraintTop_toBottomOf="@id/tvEmployeeUsername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"
            android:text="@string/email_1_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvEmployeeAddress"
            app:layout_constraintTop_toBottomOf="@id/tvEmployeeEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"
            android:text="@string/address_1_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvEmployeeDOB"
            app:layout_constraintTop_toBottomOf="@id/tvEmployeeAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"
            android:text="@string/date_of_birth_1_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvEmployeeJobID"
            app:layout_constraintTop_toBottomOf="@id/tvEmployeeDOB"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"
            android:text="@string/job_1_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvEmployeeCleaningRoom"
            app:layout_constraintTop_toBottomOf="@id/tvEmployeeJobID"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp"
            android:text="@string/cleaning_room_1_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
